fixed horizontal scroll issue on menu for mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -66,6 +66,7 @@ main > article {
     display: flex;
     flex-flow: column;
     bottom: 0;
+    overflow: hidden;
     justify-content: flex-end;
     width: 100%;
     height: 100%;
